--- a/test/software-package.html
+++ b/test/software-package.html
@@ -481,10 +481,88 @@
             </div>
         </div>
         
-        <footer class="py-4 mt-5 text-muted">
+        <footer class="global-footer">
             <div class="container">
-                2011&ndash;2017 openSUSE and contributors. Theme designed by <a href="https://guoyunhe.me/">Guo Yunhe</a>.
-            </div>
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        <h6>Developers</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Documentation</a></li>
+                            <li><a href="#">Build Service</a></li>
+                            <li><a href="#">Bugzilla</a></li>
+                            <li><a href="#">Github</a></li>
+                            <li><a href="#">openFATE</a></li>
+                            <li><a href="#">SUSE Studio</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <h6>Information</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Release notes</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Planet</a></li>
+                            <li><a href="#">Shop</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <h6>Community</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Connect</a></li>
+                            <li><a href="#">Google+ Group</a></li>
+                            <li><a href="#">Facebook Group</a></li>
+                            <li><a href="#">Mail lists</a></li>
+                            <li><a href="#">IRC channels</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <h6>Social Media</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Google+</a></li>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">YouTube</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                &copy; 2011&ndash;2017 openSUSE contributors.
+
+                <div class="btn-group dropup float-sm-right">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        English
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <a class="dropdown-item" value="ar">Arabic</a>
+                        <a class="dropdown-item" value="ast">Asturian</a>
+                        <a class="dropdown-item" value="ca">Catalan</a>
+                        <a class="dropdown-item" value="cs">Czech</a>
+                        <a class="dropdown-item" value="da">Danish</a>
+                        <a class="dropdown-item" value="de">German</a>
+                        <a class="dropdown-item" value="el">Greek</a>
+                        <a class="dropdown-item" value="en">English</a>
+                        <a class="dropdown-item" value="es">Español</a>
+                        <a class="dropdown-item" value="fa">Persian</a>
+                        <a class="dropdown-item" value="fr">French</a>
+                        <a class="dropdown-item" value="gl">Galician</a>
+                        <a class="dropdown-item" value="id">Indonesian</a>
+                        <a class="dropdown-item" value="it">Italian</a>
+                        <a class="dropdown-item" value="ja">Japanese</a>
+                        <a class="dropdown-item" value="ko">Korean</a>
+                        <a class="dropdown-item" value="lt">Lietuvių</a>
+                        <a class="dropdown-item" value="nl">Dutch</a>
+                        <a class="dropdown-item" value="nn">Norwegian</a>
+                        <a class="dropdown-item" value="pl">Polski</a>
+                        <a class="dropdown-item" value="pt_BR">Portuguese</a>
+                        <a class="dropdown-item" value="ru">Русский</a>
+                        <a class="dropdown-item" value="sk">Slovak</a>
+                        <a class="dropdown-item" value="sv">Swedish</a>
+                        <a class="dropdown-item" value="uk">Ukrainian</a>
+                        <a class="dropdown-item" value="zh_CN">Simplified Chinese</a>
+                        <a class="dropdown-item" value="zh_TW">Traditional Chinese</a>
+                    </div><!-- /.dropdown-menu -->
+                </div><!-- /.btn-group -->
+            </div><!-- /.container -->
         </footer>
 
         <!-- Modal -->
