--- a/test/software-package.html
+++ b/test/software-package.html
@@ -13,7 +13,7 @@
 
     <body>
 
-        <nav id="global-navbar" class="navbar sticky-top navbar-inverse navbar-toggleable-md bg-inverse">
+        <nav id="global-navbar" class="navbar sticky-top navbar-toggleable navbar-inverse bg-inverse">
 
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -32,37 +32,13 @@
                         <a class="nav-link" href="#">Software</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Document</a>
+                        <a class="nav-link" href="#">Guides</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Wiki</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Forum</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Community
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">Connect</a>
-                            <a class="dropdown-item" href="#">Planet</a>
-                            <a class="dropdown-item" href="#">Mail list</a>
-                            <a class="dropdown-item" href="#">IRC</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Development
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#" title="Where we build openSUSE and software packages">Build Service / OBS</a>
-                            <a class="dropdown-item" href="#" title="Where you report bugs of openSUSE">Bugzilla</a>
-                            <a class="dropdown-item" href="#">Dev Document</a>
-                            <a class="dropdown-item" href="#">Feature Request</a>
-                            <a class="dropdown-item" href="#">SUSE Studio</a>
-                        </div>
+                        <a class="nav-link" href="#">Forums</a>
                     </li>
                 </ul>
             </div>
@@ -112,7 +88,7 @@
                             <button class="btn btn-lg btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -145,7 +121,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -174,7 +150,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -203,7 +179,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -232,7 +208,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -263,7 +239,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -292,7 +268,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -321,7 +297,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -350,7 +326,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -381,7 +357,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -410,7 +386,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -439,7 +415,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -468,7 +444,7 @@
                             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="typcn typcn-download-outline"></span> Download
                             </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" href="#">32 bit</a>
                                 <a class="dropdown-item" href="#">64 bit</a>
                                 <a class="dropdown-item" href="#">ARM 32 bit</a>
@@ -528,40 +504,38 @@
 
                 &copy; 2011&ndash;2017 openSUSE contributors.
 
-                <div class="btn-group dropup float-sm-right">
-                    <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        English
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                        <a class="dropdown-item" value="ar">Arabic</a>
-                        <a class="dropdown-item" value="ast">Asturian</a>
-                        <a class="dropdown-item" value="ca">Catalan</a>
-                        <a class="dropdown-item" value="cs">Czech</a>
-                        <a class="dropdown-item" value="da">Danish</a>
-                        <a class="dropdown-item" value="de">German</a>
-                        <a class="dropdown-item" value="el">Greek</a>
-                        <a class="dropdown-item" value="en">English</a>
-                        <a class="dropdown-item" value="es">Español</a>
-                        <a class="dropdown-item" value="fa">Persian</a>
-                        <a class="dropdown-item" value="fr">French</a>
-                        <a class="dropdown-item" value="gl">Galician</a>
-                        <a class="dropdown-item" value="id">Indonesian</a>
-                        <a class="dropdown-item" value="it">Italian</a>
-                        <a class="dropdown-item" value="ja">Japanese</a>
-                        <a class="dropdown-item" value="ko">Korean</a>
-                        <a class="dropdown-item" value="lt">Lietuvių</a>
-                        <a class="dropdown-item" value="nl">Dutch</a>
-                        <a class="dropdown-item" value="nn">Norwegian</a>
-                        <a class="dropdown-item" value="pl">Polski</a>
-                        <a class="dropdown-item" value="pt_BR">Portuguese</a>
-                        <a class="dropdown-item" value="ru">Русский</a>
-                        <a class="dropdown-item" value="sk">Slovak</a>
-                        <a class="dropdown-item" value="sv">Swedish</a>
-                        <a class="dropdown-item" value="uk">Ukrainian</a>
-                        <a class="dropdown-item" value="zh_CN">Simplified Chinese</a>
-                        <a class="dropdown-item" value="zh_TW">Traditional Chinese</a>
-                    </div><!-- /.dropdown-menu -->
-                </div><!-- /.btn-group -->
+                <form class="form-inline float-right">
+                    Change language:
+                    <select class="form-control">
+                        <option value="ar">Arabic</option>
+                        <option value="ast">Asturian</option>
+                        <option value="ca">Catalan</option>
+                        <option value="cs">Czech</option>
+                        <option value="da">Danish</option>
+                        <option value="de">German</option>
+                        <option value="el">Greek</option>
+                        <option value="en" selected>English</option>
+                        <option value="es">Español</option>
+                        <option value="fa">Persian</option>
+                        <option value="fr">French</option>
+                        <option value="gl">Galician</option>
+                        <option value="id">Indonesian</option>
+                        <option value="it">Italian</option>
+                        <option value="ja">Japanese</option>
+                        <option value="ko">Korean</option>
+                        <option value="lt">Lietuvių</option>
+                        <option value="nl">Dutch</option>
+                        <option value="nn">Norwegian</option>
+                        <option value="pl">Polski</option>
+                        <option value="pt_BR">Portuguese</option>
+                        <option value="ru">Русский</option>
+                        <option value="sk">Slovak</option>
+                        <option value="sv">Swedish</option>
+                        <option value="uk">Ukrainian</option>
+                        <option value="zh_CN">Simplified Chinese</option>
+                        <option value="zh_TW">Traditional Chinese</option>
+                    </select>
+                </form>
             </div><!-- /.container -->
         </footer>
 
