Fix footer float and clearfix problem

--- a/test/software-package.html
+++ b/test/software-package.html
@@ -502,10 +502,10 @@
                     </div>
                 </div>
 
-                &copy; 2011&ndash;2017 openSUSE contributors.
+                <p>&copy; 2011&ndash;2017 openSUSE contributors.</p>
 
-                <form class="form-inline float-right">
-                    Change language:
+                <form class="form-inline float-sm-right">
+                    <lable>Change language</label>
                     <select class="form-control">
                         <option value="ar">Arabic</option>
                         <option value="ast">Asturian</option>
