--- a/test/software-package.html
+++ b/test/software-package.html
@@ -13,32 +13,32 @@
 
     <body>
 
-        <nav id="global-navbar" class="navbar sticky-top navbar-toggleable navbar-inverse bg-inverse">
+        <nav id="global-navbar" class="navbar navbar-toggleable navbar-inverse bg-inverse">
 
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <a class="navbar-brand" href="#">
-                <img src="../src/images/logo/logo-white.svg" width="48" height="30" class="d-inline-block align-top" alt="openSUSE Logo">
+                <img src="../images/logo/logo-white.svg" width="48" height="30" class="d-inline-block align-top" alt="openSUSE Logo">
             </a>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Download</a>
+                        <a class="nav-link" href="download.html">Download</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Software</a>
+                        <a class="nav-link" href="software.html">Software</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Guides</a>
+                        <a class="nav-link" href="document.html">Guides</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Wiki</a>
+                        <a class="nav-link" href="wiki.html">Wiki</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Forums</a>
+                        <a class="nav-link" href="forum.html">Forums</a>
                     </li>
                 </ul>
             </div>
