Add links to download pages

--- a/test/download.html
+++ b/test/download.html
@@ -197,6 +197,17 @@
 
             <p>If you meet any problems in installation, ask in <a href="#">forum</a> or <a href="#">IRC</a>. Community members are very willing to help you.</p>
 
+            <h3>Useful links</h3>
+
+            <ul class="list-unstyled">
+                <li><a href="http://en.opensuse.org/SDB:Download_help">Download Help</a></li>
+                <li><a href="http://en.opensuse.org/SDB:Download_help#Burn_the_ISO_image.28s.29">Burn CD/DVD Image(s)</a></li>
+                <li><a href="http://en.opensuse.org/Portal:Installation">Installation Guides</a></li>
+                <li><a href="http://doc.opensuse.org/">Official Manuals</a></li>
+                <li><a href="http://en.opensuse.org/Package_repositories">Package Repositories</a></li>
+                <li><a href="http://en.opensuse.org/openSUSE:Submitting_bug_reports">Reporting Bugs</a></li>
+            </ul>
+
             <h2 class="my-5">Have a lot of fun!</h2>
 
         </div>
