Simple document page implement

--- a/test/software-package.html
+++ b/test/software-package.html
@@ -505,7 +505,7 @@
                 <p>&copy; 2011&ndash;2017 openSUSE contributors.</p>
 
                 <form class="form-inline float-sm-right">
-                    <lable>Change language</label>
+                    <label>Change language</label>
                     <select class="form-control">
                         <option value="ar">Arabic</option>
                         <option value="ast">Asturian</option>
