--- a/test/document.html
+++ b/test/document.html
@@ -456,7 +456,12 @@
 
       <div class="footer-copyright-language-row">
         <div class="footer-copyright">
+          <span class="float-right">
+            Language:
+            <select id="language-select"></select>
+          </span>
           &copy; 2011&ndash;2017 openSUSE contributors
+
         </div>
       </div>
     </div>
