Update translated string when changing language

--- a/test/document.html
+++ b/test/document.html
@@ -28,17 +28,17 @@
     <div class="collapse navbar-collapse" id="global-navbar-content">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link l10n" href="https://software.opensuse.org/explore">
+          <a class="nav-link l10n" data-msg-id="software" href="https://software.opensuse.org/explore">
             Software
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link l10n" href="https://software.opensuse.org/">
+          <a class="nav-link l10n" data-msg-id="download" href="https://software.opensuse.org/">
             Download
           </a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link l10n" href="https://doc.opensuse.org/">
+          <a class="nav-link l10n" data-msg-id="documentation" href="https://doc.opensuse.org/">
             Documentation
           </a>
         </li>
