$font-path override

--- a/test/document.html
+++ b/test/document.html
@@ -454,16 +454,14 @@
         </div>
       </div>
 
-      <div class="footer-copyright-language-row">
-        <div class="footer-copyright">
-          <span class="float-right">
-            Language:
-            <select id="language-select"></select>
-          </span>
-          &copy; 2011&ndash;2017 openSUSE contributors
-
-        </div>
+      <div class="d-md-flex justify-content-between align-items-center">
+        <div class="mb-3">&copy; 2018 SUSE LLC, openSUSE Contributors &amp; others.</div>
+        <form class="form-inline mb-3">
+          <label for="language-select">Language:</label>
+          <select id="language-select" class="form-control ml-3"></select>
+        </form>
       </div>
+
     </div>
     <!-- /.container -->
   </footer>
