Remove jQuery in language-select.js

--- a/test/document.html
+++ b/test/document.html
@@ -10,12 +10,6 @@
 
   <link href="../dist/css/chameleon.css" rel="stylesheet" />
   <script src="../dist/js/chameleon.js"></script>
-  <script>
-    $(function () {
-      renderLanguageSelect();
-      //autoDetectLanguage();
-    });
-  </script>
 </head>
 
 <body>
@@ -484,6 +478,11 @@
     </div>
     <!-- /.container -->
   </footer>
+
+  <script>
+    renderLanguageSelect();
+    autoDetectLanguage();
+  </script>
 
 </body>
 
