--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>openSUSE - Documentation Guides &amp; Manuals</title>
+  <title>Yooo - Documentation Guides &amp; Manuals</title>
 
   <link href="dist/css/chameleon.css" rel="stylesheet" />
   <script src="dist/js/chameleon.js"></script>
