--- a/www.html
+++ b/www.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="actions">
-        <div class="dropdown" id="language-dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">en</a>
+        <div class="dropdown auto-detect" id="language-dropdown"><a class="dropdown-toggle" href="#" data-toggle="dropdown">en</a>
           <div class="dropdown-menu dropdown-menu-right"></div>
         </div>
         <div class="custom-control custom-switch dark-mode-switch">
