card in dark theme

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
         <a href="https://getbootstrap.com/">Bootstrap</a>.
       </p>
       <h3 id="buttons">Buttons</h3>
-      <h4>Button color variants</h4>
       <p>
         Bootstrap provided several color variants of buttons. We don't recommend you
         to use all of them. Instead, you should use as less variants as possible.
@@ -89,7 +88,6 @@
         <button class="btn btn-link">Link</button>
       </div>
       <h3 id="inputs">Inputs</h3>
-      <h4>Normal inputs</h4>
       <p>
         Text, search, email, password inputs have the same appearance. They are just
         single element components.
@@ -98,7 +96,6 @@
         <input class="form-control mb-3" type="text" placeholder="Text input"/>
         <textarea class="form-control" placeholder="Textarea"></textarea>
       </div>
-      <h4>Cunstom inputs</h4>
       <p>Selects, checkboxs, radio buttons and file inputs should use custom control.</p>
       <div class="mb-3">
         <div class="custom-control custom-checkbox mb-3">
@@ -134,6 +131,39 @@
         <div class="custom-control custom-switch dark-mode-switch">
           <input class="custom-control-input" id="switch1" type="checkbox"/>
           <label class="custom-control-label" for="switch1">Dark Mode</label>
+        </div>
+      </div>
+      <h3 id="alerts">Alerts</h3>
+      <p>You can only use four alert variants: info, success, warning, danger</p>
+      <div class="alert alert-info">This is an alert.</div>
+      <div class="alert alert-success">This is an alert.</div>
+      <div class="alert alert-warning">This is an alert.</div>
+      <div class="alert alert-danger">This is an alert.</div>
+      <h3 id="cards">Cards</h3>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card"><img class="card-img-top" src="dist/images/logo/leap-green.png"/>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card"><img class="card-img-top" src="dist/images/logo/logo-gray.png"/>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card"><img class="card-img-top" src="dist/images/logo/tumbleweed-green.png"/>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p></p><a class="btn btn-primary" href="#">Go somewhere</a>
+            </div>
+          </div>
         </div>
       </div>
       <h2 id="graphics">Graphics</h2>
