Alert link color

--- a/index.html
+++ b/index.html
@@ -135,10 +135,22 @@
       </div>
       <h3 id="alerts">Alerts</h3>
       <p>You can only use four alert variants: info, success, warning, danger</p>
-      <div class="alert alert-info">This is an alert.</div>
-      <div class="alert alert-success">This is an alert.</div>
-      <div class="alert alert-warning">This is an alert.</div>
-      <div class="alert alert-danger">This is an alert.</div>
+      <div class="alert alert-info">
+        This is an alert.
+        <a href="#">Link.</a>
+      </div>
+      <div class="alert alert-success">
+        This is an alert.
+        <a href="#">Link.</a>
+      </div>
+      <div class="alert alert-warning">
+        This is an alert.
+        <a href="#">Link.</a>
+      </div>
+      <div class="alert alert-danger">
+        This is an alert.
+        <a href="#">Link.</a>
+      </div>
       <h3 id="cards">Cards</h3>
       <div class="row">
         <div class="col-md-4">
