--- a/index.html
+++ b/index.html
@@ -178,6 +178,15 @@
           </div>
         </div>
       </div>
+      <h3>List Group</h3>
+      <p>Please don't use contextual classes.</p>
+      <ul class="list-group">
+        <li class="list-group-item active">Cras justo odio</li>
+        <li class="list-group-item">Dapibus ac facilisis in</li>
+        <li class="list-group-item">Morbi leo risus</li>
+        <li class="list-group-item">Porta ac consectetur ac</li>
+        <li class="list-group-item">Vestibulum at eros</li>
+      </ul>
       <h2 id="graphics">Graphics</h2>
       <p>
         Based on
