--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <h3>Link from CDN</h3>
       <pre><code class="html">&lt;link href=&quot;https://static.opensuse.org/chameleon/dist/css/chameleon.css&quot; rel=&quot;stylesheet&quot;/&gt;</code></pre>
       <p>If your application already provides jQuery (MediaWiki, WordPress, etc.):</p>
-      <pre><code class="html">&lt;script src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon-no-jquery.js&quot;&gt;&lt;script&gt;</code></pre>
+      <pre><code class="html">&lt;script src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon-no-jquery.js&quot;&gt;&lt;/script&gt;</code></pre>
       <p>Otherwise:</p>
-      <pre><code class="html">&lt;script src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon.js&quot;&gt;&lt;script&gt;</code></pre>
+      <pre><code class="html">&lt;script src=&quot;https://static.opensuse.org/chameleon/dist/js/chameleon.js&quot;&gt;&lt;/script&gt;</code></pre>
       <h3>Install from NPM</h3>
       <pre><code class="bash">npm install --save opensuse-theme-chameleon</code></pre>
       <h3>Import styles to SaSS</h3>
