--- a/wiki.html
+++ b/wiki.html
@@ -1,54 +1,1 @@
-
-<html lang="en">
-  <head>
-    <title>openSUSE Wiki</title>
-    <link href="./dist/images/app-icons/www-16.png" rel="icon" sizes="16x16" type="image/png"/>
-    <link href="./dist/images/app-icons/www.png" rel="icon" sizes="256x256" type="image/png"/>
-    <link href="./dist/css/chameleon.css" rel="stylesheet"/>
-  </head>
-  <body>
-    <nav class="cross-site-navbar">
-      <div class="sites">
-        <div class="menu"><a class="l10n" href="www.html" data-msg-id="main">Main</a><a class="l10n" href="software.html" data-msg-id="software">Software</a><a class="l10n" href="doc.html" data-msg-id="doc">Doc</a><a class="l10n" href="wiki.html" data-msg-id="wiki" data-url-id="wiki-url">Wiki</a><a class="l10n" href="forum.html" data-msg-id="forum" data-url-id="forum-url">Forum</a></div>
-        <div class="dropdown"><a class="dropdown-toggle l10n" href="#" data-toggle="dropdown" data-msg-id="more">More</a>
-          <div class="dropdown-menu dropdown-menu-right"><a class="l10n" href="www.html" data-msg-id="main">Main</a><a class="l10n" href="software.html" data-msg-id="software">Software</a><a class="l10n" href="doc.html" data-msg-id="documentation">Documentation</a><a class="l10n" href="wiki.html" data-msg-id="wiki" data-url-id="wiki-url">Wiki</a><a class="l10n" href="forum.html" data-msg-id="forum" data-url-id="forum-url">Forum</a>
-            <div class="dropdown-header l10n" data-msg-id="development">Development</div><a class="l10n" href="https://build.opensuse.org/" data-msg-id="build-service">Build Service</a><a href="https://bugzilla.opensuse.org/">Bugzilla</a><a href="https://github.com/openSUSE/">GitHub</a><a href="https://openqa.opensuse.org/">openQA</a><a href="https://l10n.opensuse.org/">Weblate</a>
-            <div class="dropdown-header l10n" data-msg-id="information">Information</div><a class="l10n" href="https://news.opensuse.org/" data-msg-id="news">News</a><a class="l10n" href="https://events.opensuse.org/" data-msg-id="events">Events</a><a class="l10n" href="https://planet.opensuse.org/" data-msg-id="planet">Planet</a><a class="l10n" href="https://shop.opensuse.org/" data-msg-id="shop">Shop</a><a class="l10n" href="https://status.opensuse.org/" data-msg-id="status">Status</a>
-            <div class="dropdown-header l10n" data-msg-id="community">Community</div><a class="l10n" href="https://www.facebook.com/groups/opensuseproject/" data-msg-id="facebook-group">Facebook Group</a><a class="l10n" href="https://en.opensuse.org/openSUSE:IRC_list" data-msg-id="irc-channels">IRC Channels</a><a class="l10n" href="https://en.opensuse.org/openSUSE:Mailing_lists_subscription" data-msg-id="mail-lists">Mail Lists</a><a href="http://reddit.com/r/openSUSE/">Reddit</a><a class="l10n" href="https://t.me/opensuseusers" data-msg-id="telegram-group">Telegram Group</a>
-            <div class="dropdown-header l10n" data-msg-id="social-media">Social Media</div><a href="https://www.facebook.com/en.openSUSE">Facebook</a><a href="https://fosstodon.org/@opensuse">Mastodon</a><a href="https://t.me/opensusenews">Telegram</a><a href="https://twitter.com/opensuse">Twitter</a><a href="https://www.youtube.com/user/opensusetv">YouTube</a>
-          </div>
-        </div>
-      </div>
-      <div class="actions">
-        <div class="custom-control custom-switch dark-mode-switch">
-          <input class="custom-control-input" id="dark-mode-input" type="checkbox"/>
-          <label class="custom-control-label l10n" for="dark-mode-input" data-msg-id="dark-mode"><span class="d-none d-sm-inline">Dark Mode</span></label>
-        </div>
-      </div>
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light"><a class="navbar-brand" href="#"><img class="mr-2" src="dist/images/logo/logo-white.svg"/><span class="navbar-name">Wiki</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#site-menu"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse" id="site-menu">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Portals</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Help</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li>
-          <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"><span>EN</span></a>
-            <div class="dropdown-menu"><a class="dropdown-item" href="#">English</a><a class="dropdown-item" href="#">简体中文</a></div>
-          </li>
-        </ul>
-        <form class="form-inline">
-          <input class="form-control l10n" type="search" data-msg-id="search" placeholder="Search"/>
-        </form>
-        <ul class="navbar-user-menu navbar-nav">
-          <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"><img src="https://www.gravatar.com/avatar/4391a20b3ad9ae843e66bc179c3ae2b9"/></a>
-            <div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#">Profile</a><a class="dropdown-item" href="#">Settings</a><a class="dropdown-item" href="#">Logout</a></div>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <script src="./dist/js/chameleon.js"></script>
-  </body>
-</html>
+<html lang="en"><head><title>openSUSE Wiki</title><link href="./dist/images/app-icons/www-16.png" rel="icon" sizes="16x16" type="image/png"/><link href="./dist/images/app-icons/www.png" rel="icon" sizes="256x256" type="image/png"/><link href="./dist/css/chameleon.css" rel="stylesheet"/></head><body><nav class="cross-site-navbar"><div class="sites"><div class="menu"><a class="l10n" href="www.html" data-msg-id="main">Main</a><a class="l10n" href="software.html" data-msg-id="software">Software</a><a class="l10n" href="doc.html" data-msg-id="doc">Doc</a><a class="l10n" href="wiki.html" data-msg-id="wiki" data-url-id="wiki-url">Wiki</a><a class="l10n" href="forum.html" data-msg-id="forum" data-url-id="forum-url">Forum</a></div><div class="dropdown"><a class="dropdown-toggle l10n" href="#" data-toggle="dropdown" data-msg-id="more">More</a><div class="dropdown-menu dropdown-menu-right"><a class="l10n" href="www.html" data-msg-id="main">Main</a><a class="l10n" href="software.html" data-msg-id="software">Software</a><a class="l10n" href="doc.html" data-msg-id="documentation">Documentation</a><a class="l10n" href="wiki.html" data-msg-id="wiki" data-url-id="wiki-url">Wiki</a><a class="l10n" href="forum.html" data-msg-id="forum" data-url-id="forum-url">Forum</a><div class="dropdown-header l10n" data-msg-id="development">Development</div><a class="l10n" href="https://build.opensuse.org/" data-msg-id="build-service">Build Service</a><a href="https://bugzilla.opensuse.org/">Bugzilla</a><a href="https://github.com/openSUSE/">GitHub</a><a href="https://openqa.opensuse.org/">openQA</a><a href="https://l10n.opensuse.org/">Weblate</a><div class="dropdown-header l10n" data-msg-id="information">Information</div><a class="l10n" href="https://news.opensuse.org/" data-msg-id="news">News</a><a class="l10n" href="https://events.opensuse.org/" data-msg-id="events">Events</a><a class="l10n" href="https://planet.opensuse.org/" data-msg-id="planet">Planet</a><a class="l10n" href="https://shop.opensuse.org/" data-msg-id="shop">Shop</a><a class="l10n" href="https://status.opensuse.org/" data-msg-id="status">Status</a><div class="dropdown-header l10n" data-msg-id="community">Community</div><a class="l10n" href="https://www.facebook.com/groups/opensuseproject/" data-msg-id="facebook-group">Facebook Group</a><a class="l10n" href="https://en.opensuse.org/openSUSE:IRC_list" data-msg-id="irc-channels">IRC Channels</a><a class="l10n" href="https://en.opensuse.org/openSUSE:Mailing_lists_subscription" data-msg-id="mail-lists">Mail Lists</a><a href="http://reddit.com/r/openSUSE/">Reddit</a><a class="l10n" href="https://t.me/opensuseusers" data-msg-id="telegram-group">Telegram Group</a><div class="dropdown-header l10n" data-msg-id="social-media">Social Media</div><a href="https://www.facebook.com/en.openSUSE">Facebook</a><a href="https://fosstodon.org/@opensuse">Mastodon</a><a href="https://t.me/opensusenews">Telegram</a><a href="https://twitter.com/opensuse">Twitter</a><a href="https://www.youtube.com/user/opensusetv">YouTube</a></div></div></div><div class="actions"><div class="custom-control custom-switch dark-mode-switch"><input class="custom-control-input" id="dark-mode-input" type="checkbox"/><label class="custom-control-label l10n" for="dark-mode-input" data-msg-id="dark-mode"><span class="d-none d-sm-inline">Dark Mode</span></label></div></div></nav><nav class="navbar navbar-expand-lg navbar-light bg-light"><a class="navbar-brand" href="#"><img class="mr-2" src="dist/images/logo/logo-white.svg"/><span class="navbar-name">Wiki</span></a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#site-menu"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="site-menu"><ul class="navbar-nav mr-auto"><li class="nav-item"><a class="nav-link" href="#">Home</a></li><li class="nav-item"><a class="nav-link" href="#">Portals</a></li><li class="nav-item"><a class="nav-link" href="#">Categories</a></li><li class="nav-item"><a class="nav-link" href="#">Help</a></li><li class="nav-item"><a class="nav-link" href="#">FAQ</a></li><li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"><span>EN</span></a><div class="dropdown-menu"><a class="dropdown-item" href="#">English</a><a class="dropdown-item" href="#">简体中文</a></div></li></ul><form class="form-inline"><input class="form-control l10n" type="search" data-msg-id="search" placeholder="Search"/></form><ul class="navbar-user-menu navbar-nav"><li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"><img src="https://www.gravatar.com/avatar/4391a20b3ad9ae843e66bc179c3ae2b9"/></a><div class="dropdown-menu dropdown-menu-right"><a class="dropdown-item" href="#">Profile</a><a class="dropdown-item" href="#">Settings</a><a class="dropdown-item" href="#">Logout</a></div></li></ul></div></nav><script src="./dist/js/chameleon.js"></script></body></html>
