use remix icons in navbar

--- a/changelog.html
+++ b/changelog.html
@@ -1,12 +1,10 @@
-<html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><title>Chameleon - web theme for openSUSE</title><link href="./dist/images/app-icons/www-16.png" rel="icon" sizes="16x16" type="image/png"/><link href="./dist/images/app-icons/www.png" rel="icon" sizes="256x256" type="image/png"/><link href="./dist/css/chameleon.css" rel="stylesheet"/><link href="./dist/css/theme-doc.css" rel="stylesheet"/></head><body data-spy="scroll" data-target="#theme-doc-navbar" data-offset="100" style="position: relative;"><nav class="navbar navbar-expand-lg"><a class="navbar-brand" href="/"><img class="mr-2" src="./dist/images/logo/logo-white.svg"/><span class="navbar-title"><Chameleon></Chameleon></span></a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbar-collapse"><ul class="navbar-nav mr-auto"><li class="nav-item"><a class="nav-link" href="/">Get Started</a></li><li class="nav-item"><a class="nav-link" href="/elements.html">Elements</a></li><li class="nav-item"><a class="nav-link" href="/components.html">Components</a></li><li class="nav-item"><a class="nav-link" href="/changelog.html">Changelog</a></li></ul></div></nav><div class="container"><h1>Changelog</h1>
+<html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/><title>Chameleon - web theme for openSUSE</title><link href="./dist/images/app-icons/www-16.png" rel="icon" sizes="16x16" type="image/png"/><link href="./dist/images/app-icons/www.png" rel="icon" sizes="256x256" type="image/png"/><link href="./dist/css/chameleon.css" rel="stylesheet"/><link href="./dist/css/theme-doc.css" rel="stylesheet"/></head><body data-spy="scroll" data-target="#theme-doc-navbar" data-offset="100" style="position: relative;"><nav class="navbar navbar-expand-lg"><a class="navbar-brand" href="/"><img class="mr-2" src="./dist/images/logo/logo-white.svg"/><span class="navbar-title"><Chameleon></Chameleon></span></a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse"><svg class="icon"><use xlink:href="/dist/svg/sprite.svg#menu-2-line"></use></svg></button><div class="collapse navbar-collapse" id="navbar-collapse"><ul class="navbar-nav mr-auto"><li class="nav-item"><a class="nav-link" href="/">Get Started</a></li><li class="nav-item"><a class="nav-link" href="/elements.html">Elements</a></li><li class="nav-item"><a class="nav-link" href="/components.html">Components</a></li><li class="nav-item"><a class="nav-link" href="/changelog.html">Changelog</a></li></ul></div></nav><div class="container"><h1>Changelog</h1>
 <p>All notable changes to this project will be documented in this file.</p>
 <p>The format is based on <a href="https://keepachangelog.com/en/1.0.0/">Keep a Changelog</a>,
 and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semantic Versioning</a>.</p>
 <h2><a href="https://github.com/openSUSE/chameleon/compare/v1.3.0...HEAD">Unreleased</a></h2>
 <h3>Added</h3>
 <ul>
-<li>Wiki test pages</li>
-<li>Wiki print styles</li>
 <li>sticky-scroller for wiki side toc</li>
 <li>Language code pt, zh, zh-Hans, zh-Hant</li>
 <li>Buttons and inputs in dark background</li>
@@ -16,13 +14,17 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 </ul>
 <h3>Chagned</h3>
 <ul>
-<li>Update to Bootstrap 4.3.1</li>
+<li>Update to Bootstrap 4.4.1</li>
 <li>Update Gulp packages for security reason</li>
 <li>Change from gulp-uglify to gulp-uglify-es</li>
 <li>Change CJK font-weight to default and don't mix Noto Sans</li>
 <li>Remove border-radius</li>
 <li>Colors follow <a href="https://opensuse.eosdesignsystem.com/colors">openSUSE Design System</a></li>
 <li>Alert component style</li>
+</ul>
+<h3>Removed</h3>
+<ul>
+<li>Typicons (use RemixIcons instead)</li>
 </ul>
 <h2><a href="https://github.com/openSUSE/chameleon/compare/v1.2.0...v1.3.0">1.3.0</a> - 2019-03-02</h2>
 <h3>Added</h3>
