use source sans pro, source serif pro and source code pro fonts

--- a/changelog.html
+++ b/changelog.html
@@ -15,9 +15,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <h3>Chagned</h3>
 <ul>
 <li>Update to Bootstrap 4.4.1</li>
-<li>Update Gulp packages for security reason</li>
-<li>Change from gulp-uglify to gulp-uglify-es</li>
-<li>Change CJK font-weight to default and don't mix Noto Sans</li>
+<li>Use Source Sans Pro, Source Serif Pro and Source Code Pro fonts</li>
 <li>Remove border-radius</li>
 <li>Colors follow <a href="https://opensuse.eosdesignsystem.com/colors">openSUSE Design System</a></li>
 <li>Alert component style</li>
